--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -9,28 +9,49 @@
    </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_margin="10dp"
     android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="30dp"
+        android:src='@{item.weather.get(0).main.equals("Rain") ? @drawable/ic_rain : item.weather.get(0).main.equals("Clouds") ? @drawable/ic_cloudy : @drawable/ic_clear}'
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/ivImage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="30dp"/>
   <TextView
       android:layout_width="wrap_content"
       android:id="@+id/tvDay"
       android:text="@{item.getDay()}"
-      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginStart="10dp"
+      android:textSize="20sp"
+      android:layout_marginTop="3dp"
+      android:textColor="#000"
+      android:fontFamily="@font/robotoslab_regular"
+      app:layout_constraintStart_toEndOf="@+id/ivImage"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_height="wrap_content"/>
     <TextView
         android:layout_width="wrap_content"
         android:id="@+id/tvWeather"
+        android:textSize="20sp"
+        android:textColor="#000"
         android:text="@{item.weather.get(0).main}"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="10dp"
+        android:fontFamily="@font/robotoslab_regular"
+        app:layout_constraintStart_toEndOf="@+id/ivImage"
         app:layout_constraintTop_toBottomOf="@+id/tvDay"
         android:layout_height="wrap_content"/>
     <TextView
         android:layout_width="wrap_content"
         android:id="@+id/tvWeatherInCelcius"
+        android:textColor="#000"
+        android:fontFamily="@font/robotoslab_bold"
+        android:layout_marginEnd="10dp"
+        android:textSize="20sp"
         android:text='@{item.temp.day.toString() + "°C"}'
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDay"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
